--- a/product.html
+++ b/product.html
@@ -71,6 +71,16 @@
         </div>
       </div>
     </header>
+    <section class="my-5 max-w-10/12 mx-auto">
+      <h1 class="text-3xl md:text-5xl text-center py-5 font-bold">
+        Our Products
+      </h1>
+      <div id="catagorys-show" class="my-5 flex gap-5 justify-center"></div>
+      <div
+        id="product-Show"
+        class="my-5 grid grid-cols-1 md:grid-cols-4 gap-7"
+      ></div>
+    </section>
 
     <section class="bg-slate-900 text-gray-50">
       <footer class="footer sm:footer-horizontal p-10 max-w-10/12 mx-auto">
